Note features complete, auth to be done

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+ html, body {
+  width: 100%;
+  margin: 0;
+  padding: 0;
+
+ }
+
+ body {
+  background: rgba(32, 33, 36);
+  color: white;
+ }
+
+ * {
+  font-family: 'Open Sans', sans-serif;
+}
