--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -25,7 +25,7 @@
         <input type="password" name="password" [(ngModel)]="pwd" formControlName="password"/>
         <br/>
         <span *ngIf="!loginSignupForm.get('password').valid && loginSignupForm.get('password').touched"
-         class="err-msg">Enter a password with minimum 8 characters</span>
+         class="err-msg">Enter a password with minimum 6 characters</span>
       </div>
     </div>
     <div *ngIf="true" class="form-field confirm-password">
@@ -35,10 +35,8 @@
       <div class="form-field form-input">
         <input type="password" name="confirm-password" formControlName="cnfrmPassword"/>
         <br/>
-        <span *ngIf="!loginSignupForm.get('cnfrmPassword').valid && loginSignupForm.get('cnfrmPassword').touched"
-         class="err-msg">Enter a password with minimum 8 characters</span>
-         <span *ngIf="loginSignupForm.get('cnfrmPassword').errors['nomatch']"
-         class="err-msg">Password does not match!</span>
+         <span *ngIf="true"
+         class="err-msg">{{ loginSignupForm.get('cnfrmPassword').errors['nomatch'] }}</span>
       </div>
     </div>
     <div class="form-field">
